// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultTokens should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#FAEAEA",
  "backgroundAlertInfo": "#E8F4FD",
  "backgroundAlertSuccess": "#EBF4EC",
  "backgroundAlertWarning": "#FDF0E3",
  "backgroundBadgeCritical": "#FAEAEA",
  "backgroundBadgeDark": "#252A31",
  "backgroundBadgeInfo": "#E8F4FD",
  "backgroundBadgeNeutral": "#F5F7F9",
  "backgroundBadgeSuccess": "#EBF4EC",
  "backgroundBadgeWarning": "#FDF0E3",
  "backgroundBadgeWhite": "#FFFFFF",
  "backgroundBody": "#F5F7F9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#F5F7F9",
  "backgroundButtonBorderedHover": "#F5F7F9",
  "backgroundButtonCritical": "#D21C1C",
  "backgroundButtonCriticalActive": "#9D1515",
  "backgroundButtonCriticalHover": "#B91919",
  "backgroundButtonFacebook": "#3B5998",
  "backgroundButtonFacebookActive": "#354F88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#F5F7F9",
  "backgroundButtonGoogleActive": "#D6DEE6",
  "backgroundButtonGoogleHover": "#E5EAEF",
  "backgroundButtonInfo": "#0172CB",
  "backgroundButtonInfoActive": "#01508E",
  "backgroundButtonInfoHover": "#0161AC",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#D6DEE6",
  "backgroundButtonLinkPrimaryHover": "#E5EAEF",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#D6DEE6",
  "backgroundButtonLinkSecondaryHover": "#E5EAEF",
  "backgroundButtonPrimary": "#00A991",
  "backgroundButtonPrimaryActive": "#008F7B",
  "backgroundButtonPrimaryHover": "#009882",
  "backgroundButtonSecondary": "#E8EDF1",
  "backgroundButtonSecondaryActive": "#CAD4DE",
  "backgroundButtonSecondaryHover": "#DCE3E9",
  "backgroundButtonSuccess": "#28A138",
  "backgroundButtonSuccessActive": "#1D7228",
  "backgroundButtonSuccessHover": "#238B31",
  "backgroundButtonWarning": "#E98305",
  "backgroundButtonWarningActive": "#CD7304",
  "backgroundButtonWarningHover": "#DC7C05",
  "backgroundButtonWhite": "#FFFFFF",
  "backgroundButtonWhiteActive": "#E5EAEF",
  "backgroundButtonWhiteBordered": "transparent",
  "backgroundButtonWhiteBorderedActive": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteBorderedHover": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteHover": "#F5F7F9",
  "backgroundCard": "#FFFFFF",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#FFFFFF",
  "backgroundInputDisabled": "#EFF2F5",
  "backgroundModal": "#FFFFFF",
  "backgroundSeparator": "#EFF2F5",
  "backgroundServiceLogo": "transparent",
  "backgroundTable": "#FFFFFF",
  "backgroundTableEven": "#F5F7F9",
  "backgroundTableHover": "#EFF2F5",
  "backgroundTableShadowLeft": "linear-gradient(to left, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTableShadowRight": "linear-gradient(to right, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTag": "#F5F7F9",
  "backgroundTagActive": "#D6DEE6",
  "backgroundTagHover": "#E5EAEF",
  "backgroundTagSelected": "#252A31",
  "backgroundTagSelectedActive": "#0B0C0F",
  "backgroundTagSelectedHover": "#181B20",
  "backgroundTooltip": "#FFFFFF",
  "backgroundTooltipLargeMobile": "#005AA3",
  "borderColorButtonCriticalBordered": "#D21C1C",
  "borderColorButtonCriticalBorderedActive": "#9D1515",
  "borderColorButtonCriticalBorderedHover": "#B91919",
  "borderColorButtonFacebookBordered": "#3B5998",
  "borderColorButtonFacebookBorderedActive": "#354F88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#252A31",
  "borderColorButtonGoogleBorderedActive": "#0B0C0F",
  "borderColorButtonGoogleBorderedHover": "#181B20",
  "borderColorButtonInfoBordered": "#0172CB",
  "borderColorButtonInfoBorderedActive": "#01508E",
  "borderColorButtonInfoBorderedHover": "#0161AC",
  "borderColorButtonPrimaryBordered": "#00A991",
  "borderColorButtonPrimaryBorderedActive": "#008F7B",
  "borderColorButtonPrimaryBorderedHover": "#009882",
  "borderColorButtonSecondaryBordered": "#252A31",
  "borderColorButtonSecondaryBorderedActive": "#0B0C0F",
  "borderColorButtonSecondaryBorderedHover": "#181B20",
  "borderColorButtonSuccessBordered": "#28A138",
  "borderColorButtonSuccessBorderedActive": "#1D7228",
  "borderColorButtonSuccessBorderedHover": "#238B31",
  "borderColorButtonWarningBordered": "#E98305",
  "borderColorButtonWarningBorderedActive": "#CD7304",
  "borderColorButtonWarningBorderedHover": "#DC7C05",
  "borderColorButtonWhiteBordered": "#FFFFFF",
  "borderColorButtonWhiteBorderedActive": "#FFFFFF",
  "borderColorButtonWhiteBorderedHover": "#FFFFFF",
  "borderColorCard": "#EFF2F5",
  "borderColorCheckboxRadio": "#BAC7D5",
  "borderColorCheckboxRadioActive": "#252A31",
  "borderColorCheckboxRadioError": "#D21C1C",
  "borderColorCheckboxRadioFocus": "#0172CB",
  "borderColorCheckboxRadioHover": "#4F5E71",
  "borderColorInput": "#BAC7D5",
  "borderColorInputActive": "#4A617C",
  "borderColorInputError": "#D21C1C",
  "borderColorInputErrorFocus": "#D21C1C",
  "borderColorInputErrorHover": "#B91919",
  "borderColorInputFocus": "#0172CB",
  "borderColorInputHover": "#5D738E",
  "borderColorModal": "#EFF2F5",
  "borderColorTable": "#EFF2F5",
  "borderColorTableCell": "#BAC7D5",
  "borderColorTableHead": "#BAC7D5",
  "borderColorTag": "#EFF2F5",
  "borderColorTagFocus": "#0172CB",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowAction": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px 1px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowActionActive": "0px 1px 4px 0px rgba(37, 42, 49, 0.16), 0px 4px 8px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 114, 203, 0.3)",
  "boxShadowFixed": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px 2px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowFixedReverse": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px -2px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowOverlay": "0px 12px 24px -4px rgba(37, 42, 49, 0.24), 0px 8px 60px 0px rgba(37, 42, 49, 0.32)",
  "boxShadowRaised": "0px 4px 8px 0px rgba(37, 42, 49, 0.16), 0px 8px 24px 0px rgba(37, 42, 49, 0.24)",
  "boxShadowRaisedReverse": "0px -4px 8px 0px rgba(37, 42, 49, 0.16), 0px -8px 24px 0px rgba(37, 42, 49, 0.24)",
  "colorAlertIconCritical": "#D21C1C",
  "colorAlertIconInfo": "#0172CB",
  "colorAlertIconSuccess": "#28A138",
  "colorAlertIconWarning": "#E98305",
  "colorFormLabel": "#252A31",
  "colorFormLabelFilled": "#4F5E71",
  "colorHeading": "#252A31",
  "colorHeadingInverted": "#FFFFFF",
  "colorIconCheckboxRadio": "#00A991",
  "colorIconCheckboxRadioDisabled": "#BAC7D5",
  "colorIconCritical": "#D21C1C",
  "colorIconInfo": "#0172CB",
  "colorIconInput": "#BAC7D5",
  "colorIconPrimary": "#252A31",
  "colorIconRadioButton": "#00A991",
  "colorIconRadioButtonDisabled": "#697D95",
  "colorIconSecondary": "#4F5E71",
  "colorIconSuccess": "#28A138",
  "colorIconTertiary": "#BAC7D5",
  "colorIconWarning": "#E98305",
  "colorInfoCheckBoxRadio": "#4F5E71",
  "colorPlaceholderInput": "#697D95",
  "colorPlaceholderInputError": "#D21C1C",
  "colorPlaceholderInputFile": "#4F5E71",
  "colorPlaceholderInputFileError": "#D21C1C",
  "colorStopoverArrow": "#4F5E71",
  "colorTextAlertCritical": "#970C0C",
  "colorTextAlertInfo": "#005AA3",
  "colorTextAlertLink": "#252A31",
  "colorTextAlertSuccess": "#2B7336",
  "colorTextAlertWarning": "#AE5700",
  "colorTextBadgeCritical": "#D21C1C",
  "colorTextBadgeDark": "#FFFFFF",
  "colorTextBadgeInfo": "#0172CB",
  "colorTextBadgeNeutral": "#252A31",
  "colorTextBadgeSuccess": "#28A138",
  "colorTextBadgeWarning": "#E98305",
  "colorTextBadgeWhite": "#252A31",
  "colorTextButtonCritical": "#FFFFFF",
  "colorTextButtonCriticalActive": "#FFFFFF",
  "colorTextButtonCriticalBordered": "#D21C1C",
  "colorTextButtonCriticalBorderedActive": "#9D1515",
  "colorTextButtonCriticalBorderedHover": "#B91919",
  "colorTextButtonCriticalHover": "#FFFFFF",
  "colorTextButtonFacebook": "#FFFFFF",
  "colorTextButtonFacebookActive": "#FFFFFF",
  "colorTextButtonFacebookBordered": "#3B5998",
  "colorTextButtonFacebookBorderedActive": "#354F88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#FFFFFF",
  "colorTextButtonFilled": "#FFFFFF",
  "colorTextButtonFilledActive": "#FFFFFF",
  "colorTextButtonFilledHover": "#FFFFFF",
  "colorTextButtonGoogle": "#252A31",
  "colorTextButtonGoogleActive": "#0B0C0F",
  "colorTextButtonGoogleBordered": "#252A31",
  "colorTextButtonGoogleBorderedActive": "#0B0C0F",
  "colorTextButtonGoogleBorderedHover": "#181B20",
  "colorTextButtonGoogleHover": "#181B20",
  "colorTextButtonInfo": "#FFFFFF",
  "colorTextButtonInfoActive": "#FFFFFF",
  "colorTextButtonInfoBordered": "#0172CB",
  "colorTextButtonInfoBorderedActive": "#01508E",
  "colorTextButtonInfoBorderedHover": "#0161AC",
  "colorTextButtonInfoHover": "#FFFFFF",
  "colorTextButtonLinkPrimary": "#00A991",
  "colorTextButtonLinkPrimaryActive": "#008F7B",
  "colorTextButtonLinkPrimaryHover": "#009882",
  "colorTextButtonLinkSecondary": "#252A31",
  "colorTextButtonLinkSecondaryActive": "#0B0C0F",
  "colorTextButtonLinkSecondaryHover": "#181B20",
  "colorTextButtonPrimary": "#FFFFFF",
  "colorTextButtonPrimaryActive": "#FFFFFF",
  "colorTextButtonPrimaryBordered": "#00A991",
  "colorTextButtonPrimaryBorderedActive": "#008F7B",
  "colorTextButtonPrimaryBorderedHover": "#009882",
  "colorTextButtonPrimaryHover": "#FFFFFF",
  "colorTextButtonSecondary": "#252A31",
  "colorTextButtonSecondaryActive": "#0B0C0F",
  "colorTextButtonSecondaryBordered": "#252A31",
  "colorTextButtonSecondaryBorderedActive": "#0B0C0F",
  "colorTextButtonSecondaryBorderedHover": "#181B20",
  "colorTextButtonSecondaryHover": "#181B20",
  "colorTextButtonSuccess": "#FFFFFF",
  "colorTextButtonSuccessActive": "#FFFFFF",
  "colorTextButtonSuccessBordered": "#28A138",
  "colorTextButtonSuccessBorderedActive": "#1D7228",
  "colorTextButtonSuccessBorderedHover": "#238B31",
  "colorTextButtonSuccessHover": "#FFFFFF",
  "colorTextButtonWarning": "#FFFFFF",
  "colorTextButtonWarningActive": "#FFFFFF",
  "colorTextButtonWarningBordered": "#E98305",
  "colorTextButtonWarningBorderedActive": "#CD7304",
  "colorTextButtonWarningBorderedHover": "#DC7C05",
  "colorTextButtonWarningHover": "#FFFFFF",
  "colorTextButtonWhite": "#252A31",
  "colorTextButtonWhiteActive": "#0B0C0F",
  "colorTextButtonWhiteBordered": "#FFFFFF",
  "colorTextButtonWhiteBorderedActive": "#FFFFFF",
  "colorTextButtonWhiteBorderedHover": "#FFFFFF",
  "colorTextButtonWhiteHover": "#181B20",
  "colorTextCritical": "#D21C1C",
  "colorTextError": "#D21C1C",
  "colorTextInfo": "#0172CB",
  "colorTextInput": "#252A31",
  "colorTextInputDisabled": "#697D95",
  "colorTextInputPrefix": "#4F5E71",
  "colorTextLinkPrimary": "#007F6D",
  "colorTextLinkPrimaryHover": "#00A991",
  "colorTextLinkSecondary": "#252A31",
  "colorTextLinkSecondaryHover": "#00A991",
  "colorTextLoading": "#BAC7D5",
  "colorTextPrimary": "#252A31",
  "colorTextSecondary": "#4F5E71",
  "colorTextSuccess": "#28A138",
  "colorTextTable": "#4F5E71",
  "colorTextTag": "#252A31",
  "colorTextTagSelected": "#EFF2F5",
  "colorTextWarning": "#E98305",
  "colorTextWhite": "#FFFFFF",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "'Roboto', -apple-system, '.SFNSText-Regular', 'San Francisco', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "12px",
  "fontSizeFormFeedback": "12px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingDisplaySubtitle": "22px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeHeadingTitle4": "14px",
  "fontSizeHeadingTitle5": "12px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "12px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingDisplaySubtitle": "400",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightHeadingTitle4": "500",
  "fontWeightHeadingTitle5": "700",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "fontWeightTableHead": "700",
  "heightBadge": "24px",
  "heightButtonLarge": "52px",
  "heightButtonNormal": "44px",
  "heightButtonSmall": "32px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "32px",
  "heightIconMedium": "24px",
  "heightIconSmall": "16px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "24px",
  "heightInputGroupSeparatorSmall": "16px",
  "heightInputLarge": "52px",
  "heightInputNormal": "44px",
  "heightInputSmall": "32px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "24px",
  "heightServiceLogoSmall": "12px",
  "heightStopoverArrow": "7px",
  "lineHeightHeading": "1.2",
  "lineHeightHeadingDisplay": "44px",
  "lineHeightHeadingDisplaySubtitle": "28px",
  "lineHeightHeadingTitle1": "36px",
  "lineHeightHeadingTitle2": "28px",
  "lineHeightHeadingTitle3": "24px",
  "lineHeightHeadingTitle4": "20px",
  "lineHeightHeadingTitle5": "20px",
  "lineHeightText": "1.4",
  "lineHeightTextLarge": "22px",
  "lineHeightTextNormal": "20px",
  "lineHeightTextSmall": "16px",
  "marginBadgeIcon": "0 4px 0 0",
  "marginBottomSelectSuffix": "2px",
  "marginButtonGroup": "0 1px 0 0",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingBadge": "0 8px",
  "paddingButtonLarge": "0 28px",
  "paddingButtonLargeWithIcons": "0 16px",
  "paddingButtonLargeWithLeftIcon": "0 28px 0 16px",
  "paddingButtonLargeWithRightIcon": "0 16px 0 28px",
  "paddingButtonNormal": "0 16px",
  "paddingButtonNormalWithIcons": "0 12px",
  "paddingButtonNormalWithLeftIcon": "0 16px 0 12px",
  "paddingButtonNormalWithRightIcon": "0 12px 0 16px",
  "paddingButtonSmall": "0 12px",
  "paddingButtonSmallWithIcons": "0 8px",
  "paddingButtonSmallWithLeftIcon": "0 12px 0 8px",
  "paddingButtonSmallWithRightIcon": "0 8px 0 12px",
  "paddingButtonWithoutText": "0",
  "paddingInputFile": "0 0 0 6px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftSelectPrefix": "48px",
  "paddingLoading": "12px",
  "paddingTable": "12px 16px",
  "paddingTableCompact": "8px 12px",
  "paddingTag": "6px 8px",
  "paddingTagRemovable": "6px 6px 6px 8px",
  "paddingTagRemovableWithIcon": "6px",
  "paddingTagWithIcon": "6px 8px 6px 6px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#005AA3",
  "paletteBlueDarkActive": "#003E70",
  "paletteBlueDarkHover": "#004F8F",
  "paletteBlueDarker": "#004680",
  "paletteBlueLight": "#E8F4FD",
  "paletteBlueLightActive": "#B4DBF8",
  "paletteBlueLightHover": "#D0E9FB",
  "paletteBlueNormal": "#0172CB",
  "paletteBlueNormalActive": "#01508E",
  "paletteBlueNormalHover": "#0161AC",
  "paletteCloudDark": "#E8EDF1",
  "paletteCloudDarker": "#BAC7D5",
  "paletteCloudDarkerActive": "#94A8BE",
  "paletteCloudDarkerHover": "#A6B6C8",
  "paletteCloudLight": "#F5F7F9",
  "paletteCloudLightActive": "#D6DEE6",
  "paletteCloudLightHover": "#E5EAEF",
  "paletteCloudNormal": "#EFF2F5",
  "paletteCloudNormalActive": "#CAD4DE",
  "paletteCloudNormalHover": "#DCE3E9",
  "paletteGreenDark": "#2B7336",
  "paletteGreenDarkActive": "#1F5126",
  "paletteGreenDarkHover": "#25642F",
  "paletteGreenDarker": "#235C2B",
  "paletteGreenLight": "#EBF4EC",
  "paletteGreenLightActive": "#C3DFC7",
  "paletteGreenLightHover": "#D7EAD9",
  "paletteGreenNormal": "#28A138",
  "paletteGreenNormalActive": "#1D7228",
  "paletteGreenNormalHover": "#238B31",
  "paletteInkLight": "#4F5E71",
  "paletteInkLightActive": "#324256",
  "paletteInkLightHover": "#3E4E63",
  "paletteInkLighter": "#697D95",
  "paletteInkLighterActive": "#4A617C",
  "paletteInkLighterHover": "#5D738E",
  "paletteInkNormal": "#252A31",
  "paletteInkNormalActive": "#0B0C0F",
  "paletteInkNormalHover": "#181B20",
  "paletteOrangeDark": "#AE5700",
  "paletteOrangeDarkActive": "#753A00",
  "paletteOrangeDarkHover": "#8F4700",
  "paletteOrangeDarker": "#803F00",
  "paletteOrangeLight": "#FDF0E3",
  "paletteOrangeLightActive": "#F8D3AB",
  "paletteOrangeLightHover": "#FAE2C7",
  "paletteOrangeNormal": "#E98305",
  "paletteOrangeNormalActive": "#CD7304",
  "paletteOrangeNormalHover": "#DC7C05",
  "paletteProductDark": "#007F6D",
  "paletteProductDarkActive": "#006657",
  "paletteProductDarkHover": "#007060",
  "paletteProductDarker": "#005C4E",
  "paletteProductLight": "#ECF8F7",
  "paletteProductLightActive": "#C0E8E4",
  "paletteProductLightHover": "#D6F0EE",
  "paletteProductNormal": "#00A991",
  "paletteProductNormalActive": "#008F7B",
  "paletteProductNormalHover": "#009882",
  "paletteRedDark": "#970C0C",
  "paletteRedDarkActive": "#6D0909",
  "paletteRedDarkHover": "#890B0B",
  "paletteRedDarker": "#760909",
  "paletteRedLight": "#FAEAEA",
  "paletteRedLightActive": "#EEB9B9",
  "paletteRedLightHover": "#F4D2D2",
  "paletteRedNormal": "#D21C1C",
  "paletteRedNormalActive": "#9D1515",
  "paletteRedNormalHover": "#B91919",
  "paletteSocialFacebook": "#3B5998",
  "paletteSocialFacebookActive": "#354F88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#FFFFFF",
  "paletteWhiteActive": "#E5EAEF",
  "paletteWhiteHover": "#F5F7F9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "underline",
  "textDecorationTextLinkPrimaryHover": "none",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "none",
  "widthBadgeCircled": "24px",
  "widthBreakpointDesktop": 992,
  "widthBreakpointLargeDesktop": 1200,
  "widthBreakpointLargeMobile": 576,
  "widthBreakpointMediumMobile": 414,
  "widthBreakpointTablet": 768,
  "widthCheckbox": "20px",
  "widthCountryFlag": "24px",
  "widthIconLarge": "32px",
  "widthIconMedium": "24px",
  "widthIconSmall": "16px",
  "widthModalExtraLarge": "1280px",
  "widthModalLarge": "900px",
  "widthModalNormal": "740px",
  "widthModalSmall": "540px",
  "widthRadioButton": "20px",
  "widthStopoverArrow": "36px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;

exports[`fromPlainObject should create full theme should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#FAEAEA",
  "backgroundAlertInfo": "#E8F4FD",
  "backgroundAlertSuccess": "#EBF4EC",
  "backgroundAlertWarning": "#FDF0E3",
  "backgroundBadgeCritical": "#FAEAEA",
  "backgroundBadgeDark": "#252A31",
  "backgroundBadgeInfo": "#E8F4FD",
  "backgroundBadgeNeutral": "#F5F7F9",
  "backgroundBadgeSuccess": "#EBF4EC",
  "backgroundBadgeWarning": "#FDF0E3",
  "backgroundBadgeWhite": "#FFFFFF",
  "backgroundBody": "#F5F7F9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#F5F7F9",
  "backgroundButtonBorderedHover": "#F5F7F9",
  "backgroundButtonCritical": "#D21C1C",
  "backgroundButtonCriticalActive": "#9D1515",
  "backgroundButtonCriticalHover": "#B91919",
  "backgroundButtonFacebook": "#3B5998",
  "backgroundButtonFacebookActive": "#354F88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#F5F7F9",
  "backgroundButtonGoogleActive": "#D6DEE6",
  "backgroundButtonGoogleHover": "#E5EAEF",
  "backgroundButtonInfo": "#0172CB",
  "backgroundButtonInfoActive": "#01508E",
  "backgroundButtonInfoHover": "#0161AC",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#D6DEE6",
  "backgroundButtonLinkPrimaryHover": "#E5EAEF",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#D6DEE6",
  "backgroundButtonLinkSecondaryHover": "#E5EAEF",
  "backgroundButtonPrimary": "#ff0000",
  "backgroundButtonPrimaryActive": "#cc0000",
  "backgroundButtonPrimaryHover": "#e50000",
  "backgroundButtonSecondary": "#E8EDF1",
  "backgroundButtonSecondaryActive": "#CAD4DE",
  "backgroundButtonSecondaryHover": "#DCE3E9",
  "backgroundButtonSuccess": "#28A138",
  "backgroundButtonSuccessActive": "#1D7228",
  "backgroundButtonSuccessHover": "#238B31",
  "backgroundButtonWarning": "#E98305",
  "backgroundButtonWarningActive": "#CD7304",
  "backgroundButtonWarningHover": "#DC7C05",
  "backgroundButtonWhite": "#FFFFFF",
  "backgroundButtonWhiteActive": "#E5EAEF",
  "backgroundButtonWhiteBordered": "transparent",
  "backgroundButtonWhiteBorderedActive": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteBorderedHover": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteHover": "#F5F7F9",
  "backgroundCard": "#FFFFFF",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#FFFFFF",
  "backgroundInputDisabled": "#EFF2F5",
  "backgroundModal": "#FFFFFF",
  "backgroundSeparator": "#EFF2F5",
  "backgroundServiceLogo": "transparent",
  "backgroundTable": "#FFFFFF",
  "backgroundTableEven": "#F5F7F9",
  "backgroundTableHover": "#EFF2F5",
  "backgroundTableShadowLeft": "linear-gradient(to left, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTableShadowRight": "linear-gradient(to right, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTag": "#F5F7F9",
  "backgroundTagActive": "#D6DEE6",
  "backgroundTagHover": "#E5EAEF",
  "backgroundTagSelected": "#252A31",
  "backgroundTagSelectedActive": "#0B0C0F",
  "backgroundTagSelectedHover": "#181B20",
  "backgroundTooltip": "#FFFFFF",
  "backgroundTooltipLargeMobile": "#005AA3",
  "borderColorButtonCriticalBordered": "#D21C1C",
  "borderColorButtonCriticalBorderedActive": "#9D1515",
  "borderColorButtonCriticalBorderedHover": "#B91919",
  "borderColorButtonFacebookBordered": "#3B5998",
  "borderColorButtonFacebookBorderedActive": "#354F88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#252A31",
  "borderColorButtonGoogleBorderedActive": "#0B0C0F",
  "borderColorButtonGoogleBorderedHover": "#181B20",
  "borderColorButtonInfoBordered": "#0172CB",
  "borderColorButtonInfoBorderedActive": "#01508E",
  "borderColorButtonInfoBorderedHover": "#0161AC",
  "borderColorButtonPrimaryBordered": "#ff0000",
  "borderColorButtonPrimaryBorderedActive": "#cc0000",
  "borderColorButtonPrimaryBorderedHover": "#e50000",
  "borderColorButtonSecondaryBordered": "#252A31",
  "borderColorButtonSecondaryBorderedActive": "#0B0C0F",
  "borderColorButtonSecondaryBorderedHover": "#181B20",
  "borderColorButtonSuccessBordered": "#28A138",
  "borderColorButtonSuccessBorderedActive": "#1D7228",
  "borderColorButtonSuccessBorderedHover": "#238B31",
  "borderColorButtonWarningBordered": "#E98305",
  "borderColorButtonWarningBorderedActive": "#CD7304",
  "borderColorButtonWarningBorderedHover": "#DC7C05",
  "borderColorButtonWhiteBordered": "#FFFFFF",
  "borderColorButtonWhiteBorderedActive": "#FFFFFF",
  "borderColorButtonWhiteBorderedHover": "#FFFFFF",
  "borderColorCard": "#EFF2F5",
  "borderColorCheckboxRadio": "#BAC7D5",
  "borderColorCheckboxRadioActive": "#252A31",
  "borderColorCheckboxRadioError": "#D21C1C",
  "borderColorCheckboxRadioFocus": "#0172CB",
  "borderColorCheckboxRadioHover": "#4F5E71",
  "borderColorInput": "#BAC7D5",
  "borderColorInputActive": "#4A617C",
  "borderColorInputError": "#D21C1C",
  "borderColorInputErrorFocus": "#D21C1C",
  "borderColorInputErrorHover": "#B91919",
  "borderColorInputFocus": "#0172CB",
  "borderColorInputHover": "#5D738E",
  "borderColorModal": "#EFF2F5",
  "borderColorTable": "#EFF2F5",
  "borderColorTableCell": "#BAC7D5",
  "borderColorTableHead": "#BAC7D5",
  "borderColorTag": "#EFF2F5",
  "borderColorTagFocus": "#0172CB",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowAction": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px 1px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowActionActive": "0px 1px 4px 0px rgba(37, 42, 49, 0.16), 0px 4px 8px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 114, 203, 0.3)",
  "boxShadowFixed": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px 2px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowFixedReverse": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px -2px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowOverlay": "0px 12px 24px -4px rgba(37, 42, 49, 0.24), 0px 8px 60px 0px rgba(37, 42, 49, 0.32)",
  "boxShadowRaised": "0px 4px 8px 0px rgba(37, 42, 49, 0.16), 0px 8px 24px 0px rgba(37, 42, 49, 0.24)",
  "boxShadowRaisedReverse": "0px -4px 8px 0px rgba(37, 42, 49, 0.16), 0px -8px 24px 0px rgba(37, 42, 49, 0.24)",
  "colorAlertIconCritical": "#D21C1C",
  "colorAlertIconInfo": "#0172CB",
  "colorAlertIconSuccess": "#28A138",
  "colorAlertIconWarning": "#E98305",
  "colorFormLabel": "#252A31",
  "colorFormLabelFilled": "#4F5E71",
  "colorHeading": "#252A31",
  "colorHeadingInverted": "#FFFFFF",
  "colorIconCheckboxRadio": "#ff0000",
  "colorIconCheckboxRadioDisabled": "#BAC7D5",
  "colorIconCritical": "#D21C1C",
  "colorIconInfo": "#0172CB",
  "colorIconInput": "#BAC7D5",
  "colorIconPrimary": "#252A31",
  "colorIconRadioButton": "#ff0000",
  "colorIconRadioButtonDisabled": "#697D95",
  "colorIconSecondary": "#4F5E71",
  "colorIconSuccess": "#28A138",
  "colorIconTertiary": "#BAC7D5",
  "colorIconWarning": "#E98305",
  "colorInfoCheckBoxRadio": "#4F5E71",
  "colorPlaceholderInput": "#697D95",
  "colorPlaceholderInputError": "#D21C1C",
  "colorPlaceholderInputFile": "#4F5E71",
  "colorPlaceholderInputFileError": "#D21C1C",
  "colorStopoverArrow": "#4F5E71",
  "colorTextAlertCritical": "#970C0C",
  "colorTextAlertInfo": "#005AA3",
  "colorTextAlertLink": "#252A31",
  "colorTextAlertSuccess": "#2B7336",
  "colorTextAlertWarning": "#AE5700",
  "colorTextBadgeCritical": "#D21C1C",
  "colorTextBadgeDark": "#FFFFFF",
  "colorTextBadgeInfo": "#0172CB",
  "colorTextBadgeNeutral": "#252A31",
  "colorTextBadgeSuccess": "#28A138",
  "colorTextBadgeWarning": "#E98305",
  "colorTextBadgeWhite": "#252A31",
  "colorTextButtonCritical": "#FFFFFF",
  "colorTextButtonCriticalActive": "#FFFFFF",
  "colorTextButtonCriticalBordered": "#D21C1C",
  "colorTextButtonCriticalBorderedActive": "#9D1515",
  "colorTextButtonCriticalBorderedHover": "#B91919",
  "colorTextButtonCriticalHover": "#FFFFFF",
  "colorTextButtonFacebook": "#FFFFFF",
  "colorTextButtonFacebookActive": "#FFFFFF",
  "colorTextButtonFacebookBordered": "#3B5998",
  "colorTextButtonFacebookBorderedActive": "#354F88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#FFFFFF",
  "colorTextButtonFilled": "#FFFFFF",
  "colorTextButtonFilledActive": "#FFFFFF",
  "colorTextButtonFilledHover": "#FFFFFF",
  "colorTextButtonGoogle": "#252A31",
  "colorTextButtonGoogleActive": "#0B0C0F",
  "colorTextButtonGoogleBordered": "#252A31",
  "colorTextButtonGoogleBorderedActive": "#0B0C0F",
  "colorTextButtonGoogleBorderedHover": "#181B20",
  "colorTextButtonGoogleHover": "#181B20",
  "colorTextButtonInfo": "#FFFFFF",
  "colorTextButtonInfoActive": "#FFFFFF",
  "colorTextButtonInfoBordered": "#0172CB",
  "colorTextButtonInfoBorderedActive": "#01508E",
  "colorTextButtonInfoBorderedHover": "#0161AC",
  "colorTextButtonInfoHover": "#FFFFFF",
  "colorTextButtonLinkPrimary": "#ff0000",
  "colorTextButtonLinkPrimaryActive": "#cc0000",
  "colorTextButtonLinkPrimaryHover": "#e50000",
  "colorTextButtonLinkSecondary": "#252A31",
  "colorTextButtonLinkSecondaryActive": "#0B0C0F",
  "colorTextButtonLinkSecondaryHover": "#181B20",
  "colorTextButtonPrimary": "#FFFFFF",
  "colorTextButtonPrimaryActive": "#FFFFFF",
  "colorTextButtonPrimaryBordered": "#ff0000",
  "colorTextButtonPrimaryBorderedActive": "#cc0000",
  "colorTextButtonPrimaryBorderedHover": "#e50000",
  "colorTextButtonPrimaryHover": "#FFFFFF",
  "colorTextButtonSecondary": "#252A31",
  "colorTextButtonSecondaryActive": "#0B0C0F",
  "colorTextButtonSecondaryBordered": "#252A31",
  "colorTextButtonSecondaryBorderedActive": "#0B0C0F",
  "colorTextButtonSecondaryBorderedHover": "#181B20",
  "colorTextButtonSecondaryHover": "#181B20",
  "colorTextButtonSuccess": "#FFFFFF",
  "colorTextButtonSuccessActive": "#FFFFFF",
  "colorTextButtonSuccessBordered": "#28A138",
  "colorTextButtonSuccessBorderedActive": "#1D7228",
  "colorTextButtonSuccessBorderedHover": "#238B31",
  "colorTextButtonSuccessHover": "#FFFFFF",
  "colorTextButtonWarning": "#FFFFFF",
  "colorTextButtonWarningActive": "#FFFFFF",
  "colorTextButtonWarningBordered": "#E98305",
  "colorTextButtonWarningBorderedActive": "#CD7304",
  "colorTextButtonWarningBorderedHover": "#DC7C05",
  "colorTextButtonWarningHover": "#FFFFFF",
  "colorTextButtonWhite": "#252A31",
  "colorTextButtonWhiteActive": "#0B0C0F",
  "colorTextButtonWhiteBordered": "#FFFFFF",
  "colorTextButtonWhiteBorderedActive": "#FFFFFF",
  "colorTextButtonWhiteBorderedHover": "#FFFFFF",
  "colorTextButtonWhiteHover": "#181B20",
  "colorTextCritical": "#D21C1C",
  "colorTextError": "#D21C1C",
  "colorTextInfo": "#0172CB",
  "colorTextInput": "#252A31",
  "colorTextInputDisabled": "#697D95",
  "colorTextInputPrefix": "#4F5E71",
  "colorTextLinkPrimary": "#990000",
  "colorTextLinkPrimaryHover": "#ff0000",
  "colorTextLinkSecondary": "#252A31",
  "colorTextLinkSecondaryHover": "#ff0000",
  "colorTextLoading": "#BAC7D5",
  "colorTextPrimary": "#252A31",
  "colorTextSecondary": "#4F5E71",
  "colorTextSuccess": "#28A138",
  "colorTextTable": "#4F5E71",
  "colorTextTag": "#252A31",
  "colorTextTagSelected": "#EFF2F5",
  "colorTextWarning": "#E98305",
  "colorTextWhite": "#FFFFFF",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "'Roboto', -apple-system, '.SFNSText-Regular', 'San Francisco', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "12px",
  "fontSizeFormFeedback": "12px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingDisplaySubtitle": "22px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeHeadingTitle4": "14px",
  "fontSizeHeadingTitle5": "12px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "12px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingDisplaySubtitle": "400",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightHeadingTitle4": "500",
  "fontWeightHeadingTitle5": "700",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "fontWeightTableHead": "700",
  "heightBadge": "24px",
  "heightButtonLarge": "52px",
  "heightButtonNormal": "44px",
  "heightButtonSmall": "32px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "32px",
  "heightIconMedium": "24px",
  "heightIconSmall": "16px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "24px",
  "heightInputGroupSeparatorSmall": "16px",
  "heightInputLarge": "52px",
  "heightInputNormal": "44px",
  "heightInputSmall": "32px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "24px",
  "heightServiceLogoSmall": "12px",
  "heightStopoverArrow": "7px",
  "lineHeightHeading": "1.2",
  "lineHeightHeadingDisplay": "44px",
  "lineHeightHeadingDisplaySubtitle": "28px",
  "lineHeightHeadingTitle1": "36px",
  "lineHeightHeadingTitle2": "28px",
  "lineHeightHeadingTitle3": "24px",
  "lineHeightHeadingTitle4": "20px",
  "lineHeightHeadingTitle5": "20px",
  "lineHeightText": "1.4",
  "lineHeightTextLarge": "22px",
  "lineHeightTextNormal": "20px",
  "lineHeightTextSmall": "16px",
  "marginBadgeIcon": "0 4px 0 0",
  "marginBottomSelectSuffix": "2px",
  "marginButtonGroup": "0 1px 0 0",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingBadge": "0 8px",
  "paddingButtonLarge": "0 28px",
  "paddingButtonLargeWithIcons": "0 16px",
  "paddingButtonLargeWithLeftIcon": "0 28px 0 16px",
  "paddingButtonLargeWithRightIcon": "0 16px 0 28px",
  "paddingButtonNormal": "0 16px",
  "paddingButtonNormalWithIcons": "0 12px",
  "paddingButtonNormalWithLeftIcon": "0 16px 0 12px",
  "paddingButtonNormalWithRightIcon": "0 12px 0 16px",
  "paddingButtonSmall": "0 12px",
  "paddingButtonSmallWithIcons": "0 8px",
  "paddingButtonSmallWithLeftIcon": "0 12px 0 8px",
  "paddingButtonSmallWithRightIcon": "0 8px 0 12px",
  "paddingButtonWithoutText": "0",
  "paddingInputFile": "0 0 0 6px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftSelectPrefix": "48px",
  "paddingLoading": "12px",
  "paddingTable": "12px 16px",
  "paddingTableCompact": "8px 12px",
  "paddingTag": "6px 8px",
  "paddingTagRemovable": "6px 6px 6px 8px",
  "paddingTagRemovableWithIcon": "6px",
  "paddingTagWithIcon": "6px 8px 6px 6px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#005AA3",
  "paletteBlueDarkActive": "#003E70",
  "paletteBlueDarkHover": "#004F8F",
  "paletteBlueDarker": "#004680",
  "paletteBlueLight": "#E8F4FD",
  "paletteBlueLightActive": "#B4DBF8",
  "paletteBlueLightHover": "#D0E9FB",
  "paletteBlueNormal": "#0172CB",
  "paletteBlueNormalActive": "#01508E",
  "paletteBlueNormalHover": "#0161AC",
  "paletteCloudDark": "#E8EDF1",
  "paletteCloudDarker": "#BAC7D5",
  "paletteCloudDarkerActive": "#94A8BE",
  "paletteCloudDarkerHover": "#A6B6C8",
  "paletteCloudLight": "#F5F7F9",
  "paletteCloudLightActive": "#D6DEE6",
  "paletteCloudLightHover": "#E5EAEF",
  "paletteCloudNormal": "#EFF2F5",
  "paletteCloudNormalActive": "#CAD4DE",
  "paletteCloudNormalHover": "#DCE3E9",
  "paletteGreenDark": "#2B7336",
  "paletteGreenDarkActive": "#1F5126",
  "paletteGreenDarkHover": "#25642F",
  "paletteGreenDarker": "#235C2B",
  "paletteGreenLight": "#EBF4EC",
  "paletteGreenLightActive": "#C3DFC7",
  "paletteGreenLightHover": "#D7EAD9",
  "paletteGreenNormal": "#28A138",
  "paletteGreenNormalActive": "#1D7228",
  "paletteGreenNormalHover": "#238B31",
  "paletteInkLight": "#4F5E71",
  "paletteInkLightActive": "#324256",
  "paletteInkLightHover": "#3E4E63",
  "paletteInkLighter": "#697D95",
  "paletteInkLighterActive": "#4A617C",
  "paletteInkLighterHover": "#5D738E",
  "paletteInkNormal": "#252A31",
  "paletteInkNormalActive": "#0B0C0F",
  "paletteInkNormalHover": "#181B20",
  "paletteOrangeDark": "#AE5700",
  "paletteOrangeDarkActive": "#753A00",
  "paletteOrangeDarkHover": "#8F4700",
  "paletteOrangeDarker": "#803F00",
  "paletteOrangeLight": "#FDF0E3",
  "paletteOrangeLightActive": "#F8D3AB",
  "paletteOrangeLightHover": "#FAE2C7",
  "paletteOrangeNormal": "#E98305",
  "paletteOrangeNormalActive": "#CD7304",
  "paletteOrangeNormalHover": "#DC7C05",
  "paletteProductDark": "#990000",
  "paletteProductDarkActive": "#006657",
  "paletteProductDarkHover": "#007060",
  "paletteProductDarker": "#005C4E",
  "paletteProductLight": "#ff9999",
  "paletteProductLightActive": "#ff6666",
  "paletteProductLightHover": "#ff7f7f",
  "paletteProductNormal": "#ff0000",
  "paletteProductNormalActive": "#cc0000",
  "paletteProductNormalHover": "#e50000",
  "paletteRedDark": "#970C0C",
  "paletteRedDarkActive": "#6D0909",
  "paletteRedDarkHover": "#890B0B",
  "paletteRedDarker": "#760909",
  "paletteRedLight": "#FAEAEA",
  "paletteRedLightActive": "#EEB9B9",
  "paletteRedLightHover": "#F4D2D2",
  "paletteRedNormal": "#D21C1C",
  "paletteRedNormalActive": "#9D1515",
  "paletteRedNormalHover": "#B91919",
  "paletteSocialFacebook": "#3B5998",
  "paletteSocialFacebookActive": "#354F88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#FFFFFF",
  "paletteWhiteActive": "#E5EAEF",
  "paletteWhiteHover": "#F5F7F9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "underline",
  "textDecorationTextLinkPrimaryHover": "none",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "none",
  "widthBadgeCircled": "24px",
  "widthBreakpointDesktop": 992,
  "widthBreakpointLargeDesktop": 1200,
  "widthBreakpointLargeMobile": 576,
  "widthBreakpointMediumMobile": 414,
  "widthBreakpointTablet": 768,
  "widthCheckbox": "20px",
  "widthCountryFlag": "24px",
  "widthIconLarge": "32px",
  "widthIconMedium": "24px",
  "widthIconSmall": "16px",
  "widthModalExtraLarge": "1280px",
  "widthModalLarge": "900px",
  "widthModalNormal": "740px",
  "widthModalSmall": "540px",
  "widthRadioButton": "20px",
  "widthStopoverArrow": "36px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;

exports[`getTokens should accept some base should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#FAEAEA",
  "backgroundAlertInfo": "#E8F4FD",
  "backgroundAlertSuccess": "#EBF4EC",
  "backgroundAlertWarning": "#FDF0E3",
  "backgroundBadgeCritical": "#FAEAEA",
  "backgroundBadgeDark": "#252A31",
  "backgroundBadgeInfo": "#E8F4FD",
  "backgroundBadgeNeutral": "#F5F7F9",
  "backgroundBadgeSuccess": "#EBF4EC",
  "backgroundBadgeWarning": "#FDF0E3",
  "backgroundBadgeWhite": "#FFFFFF",
  "backgroundBody": "#F5F7F9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#F5F7F9",
  "backgroundButtonBorderedHover": "#F5F7F9",
  "backgroundButtonCritical": "#D21C1C",
  "backgroundButtonCriticalActive": "#9D1515",
  "backgroundButtonCriticalHover": "#B91919",
  "backgroundButtonFacebook": "#3B5998",
  "backgroundButtonFacebookActive": "#354F88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#F5F7F9",
  "backgroundButtonGoogleActive": "#D6DEE6",
  "backgroundButtonGoogleHover": "#E5EAEF",
  "backgroundButtonInfo": "#0172CB",
  "backgroundButtonInfoActive": "#01508E",
  "backgroundButtonInfoHover": "#0161AC",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#D6DEE6",
  "backgroundButtonLinkPrimaryHover": "#E5EAEF",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#D6DEE6",
  "backgroundButtonLinkSecondaryHover": "#E5EAEF",
  "backgroundButtonPrimary": "#00A991",
  "backgroundButtonPrimaryActive": "#008F7B",
  "backgroundButtonPrimaryHover": "#009882",
  "backgroundButtonSecondary": "#E8EDF1",
  "backgroundButtonSecondaryActive": "#CAD4DE",
  "backgroundButtonSecondaryHover": "#DCE3E9",
  "backgroundButtonSuccess": "#28A138",
  "backgroundButtonSuccessActive": "#1D7228",
  "backgroundButtonSuccessHover": "#238B31",
  "backgroundButtonWarning": "#E98305",
  "backgroundButtonWarningActive": "#CD7304",
  "backgroundButtonWarningHover": "#DC7C05",
  "backgroundButtonWhite": "#FFFFFF",
  "backgroundButtonWhiteActive": "#E5EAEF",
  "backgroundButtonWhiteBordered": "transparent",
  "backgroundButtonWhiteBorderedActive": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteBorderedHover": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteHover": "#F5F7F9",
  "backgroundCard": "#FFFFFF",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#FFFFFF",
  "backgroundInputDisabled": "#EFF2F5",
  "backgroundModal": "#FFFFFF",
  "backgroundSeparator": "#EFF2F5",
  "backgroundServiceLogo": "transparent",
  "backgroundTable": "#FFFFFF",
  "backgroundTableEven": "#F5F7F9",
  "backgroundTableHover": "#EFF2F5",
  "backgroundTableShadowLeft": "linear-gradient(to left, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTableShadowRight": "linear-gradient(to right, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTag": "#F5F7F9",
  "backgroundTagActive": "#D6DEE6",
  "backgroundTagHover": "#E5EAEF",
  "backgroundTagSelected": "#252A31",
  "backgroundTagSelectedActive": "#0B0C0F",
  "backgroundTagSelectedHover": "#181B20",
  "backgroundTooltip": "#FFFFFF",
  "backgroundTooltipLargeMobile": "#005AA3",
  "borderColorButtonCriticalBordered": "#D21C1C",
  "borderColorButtonCriticalBorderedActive": "#9D1515",
  "borderColorButtonCriticalBorderedHover": "#B91919",
  "borderColorButtonFacebookBordered": "#3B5998",
  "borderColorButtonFacebookBorderedActive": "#354F88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#252A31",
  "borderColorButtonGoogleBorderedActive": "#0B0C0F",
  "borderColorButtonGoogleBorderedHover": "#181B20",
  "borderColorButtonInfoBordered": "#0172CB",
  "borderColorButtonInfoBorderedActive": "#01508E",
  "borderColorButtonInfoBorderedHover": "#0161AC",
  "borderColorButtonPrimaryBordered": "#00A991",
  "borderColorButtonPrimaryBorderedActive": "#008F7B",
  "borderColorButtonPrimaryBorderedHover": "#009882",
  "borderColorButtonSecondaryBordered": "#252A31",
  "borderColorButtonSecondaryBorderedActive": "#0B0C0F",
  "borderColorButtonSecondaryBorderedHover": "#181B20",
  "borderColorButtonSuccessBordered": "#28A138",
  "borderColorButtonSuccessBorderedActive": "#1D7228",
  "borderColorButtonSuccessBorderedHover": "#238B31",
  "borderColorButtonWarningBordered": "#E98305",
  "borderColorButtonWarningBorderedActive": "#CD7304",
  "borderColorButtonWarningBorderedHover": "#DC7C05",
  "borderColorButtonWhiteBordered": "#FFFFFF",
  "borderColorButtonWhiteBorderedActive": "#FFFFFF",
  "borderColorButtonWhiteBorderedHover": "#FFFFFF",
  "borderColorCard": "#EFF2F5",
  "borderColorCheckboxRadio": "#BAC7D5",
  "borderColorCheckboxRadioActive": "#252A31",
  "borderColorCheckboxRadioError": "#D21C1C",
  "borderColorCheckboxRadioFocus": "#0172CB",
  "borderColorCheckboxRadioHover": "#4F5E71",
  "borderColorInput": "#BAC7D5",
  "borderColorInputActive": "#4A617C",
  "borderColorInputError": "#D21C1C",
  "borderColorInputErrorFocus": "#D21C1C",
  "borderColorInputErrorHover": "#B91919",
  "borderColorInputFocus": "#0172CB",
  "borderColorInputHover": "#5D738E",
  "borderColorModal": "#EFF2F5",
  "borderColorTable": "#EFF2F5",
  "borderColorTableCell": "#BAC7D5",
  "borderColorTableHead": "#BAC7D5",
  "borderColorTag": "#EFF2F5",
  "borderColorTagFocus": "#0172CB",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowAction": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px 1px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowActionActive": "0px 1px 4px 0px rgba(37, 42, 49, 0.16), 0px 4px 8px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 114, 203, 0.3)",
  "boxShadowFixed": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px 2px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowFixedReverse": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px -2px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowOverlay": "0px 12px 24px -4px rgba(37, 42, 49, 0.24), 0px 8px 60px 0px rgba(37, 42, 49, 0.32)",
  "boxShadowRaised": "0px 4px 8px 0px rgba(37, 42, 49, 0.16), 0px 8px 24px 0px rgba(37, 42, 49, 0.24)",
  "boxShadowRaisedReverse": "0px -4px 8px 0px rgba(37, 42, 49, 0.16), 0px -8px 24px 0px rgba(37, 42, 49, 0.24)",
  "colorAlertIconCritical": "#D21C1C",
  "colorAlertIconInfo": "#0172CB",
  "colorAlertIconSuccess": "#28A138",
  "colorAlertIconWarning": "#E98305",
  "colorFormLabel": "#252A31",
  "colorFormLabelFilled": "#4F5E71",
  "colorHeading": "#252A31",
  "colorHeadingInverted": "#FFFFFF",
  "colorIconCheckboxRadio": "#00A991",
  "colorIconCheckboxRadioDisabled": "#BAC7D5",
  "colorIconCritical": "#D21C1C",
  "colorIconInfo": "#0172CB",
  "colorIconInput": "#BAC7D5",
  "colorIconPrimary": "#252A31",
  "colorIconRadioButton": "#00A991",
  "colorIconRadioButtonDisabled": "#697D95",
  "colorIconSecondary": "#4F5E71",
  "colorIconSuccess": "#28A138",
  "colorIconTertiary": "#BAC7D5",
  "colorIconWarning": "#E98305",
  "colorInfoCheckBoxRadio": "#4F5E71",
  "colorPlaceholderInput": "#697D95",
  "colorPlaceholderInputError": "#D21C1C",
  "colorPlaceholderInputFile": "#4F5E71",
  "colorPlaceholderInputFileError": "#D21C1C",
  "colorStopoverArrow": "#4F5E71",
  "colorTextAlertCritical": "#970C0C",
  "colorTextAlertInfo": "#005AA3",
  "colorTextAlertLink": "#252A31",
  "colorTextAlertSuccess": "#2B7336",
  "colorTextAlertWarning": "#AE5700",
  "colorTextBadgeCritical": "#D21C1C",
  "colorTextBadgeDark": "#FFFFFF",
  "colorTextBadgeInfo": "#0172CB",
  "colorTextBadgeNeutral": "#252A31",
  "colorTextBadgeSuccess": "#28A138",
  "colorTextBadgeWarning": "#E98305",
  "colorTextBadgeWhite": "#252A31",
  "colorTextButtonCritical": "#FFFFFF",
  "colorTextButtonCriticalActive": "#FFFFFF",
  "colorTextButtonCriticalBordered": "#D21C1C",
  "colorTextButtonCriticalBorderedActive": "#9D1515",
  "colorTextButtonCriticalBorderedHover": "#B91919",
  "colorTextButtonCriticalHover": "#FFFFFF",
  "colorTextButtonFacebook": "#FFFFFF",
  "colorTextButtonFacebookActive": "#FFFFFF",
  "colorTextButtonFacebookBordered": "#3B5998",
  "colorTextButtonFacebookBorderedActive": "#354F88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#FFFFFF",
  "colorTextButtonFilled": "#FFFFFF",
  "colorTextButtonFilledActive": "#FFFFFF",
  "colorTextButtonFilledHover": "#FFFFFF",
  "colorTextButtonGoogle": "#252A31",
  "colorTextButtonGoogleActive": "#0B0C0F",
  "colorTextButtonGoogleBordered": "#252A31",
  "colorTextButtonGoogleBorderedActive": "#0B0C0F",
  "colorTextButtonGoogleBorderedHover": "#181B20",
  "colorTextButtonGoogleHover": "#181B20",
  "colorTextButtonInfo": "#FFFFFF",
  "colorTextButtonInfoActive": "#FFFFFF",
  "colorTextButtonInfoBordered": "#0172CB",
  "colorTextButtonInfoBorderedActive": "#01508E",
  "colorTextButtonInfoBorderedHover": "#0161AC",
  "colorTextButtonInfoHover": "#FFFFFF",
  "colorTextButtonLinkPrimary": "#00A991",
  "colorTextButtonLinkPrimaryActive": "#008F7B",
  "colorTextButtonLinkPrimaryHover": "#009882",
  "colorTextButtonLinkSecondary": "#252A31",
  "colorTextButtonLinkSecondaryActive": "#0B0C0F",
  "colorTextButtonLinkSecondaryHover": "#181B20",
  "colorTextButtonPrimary": "#FFFFFF",
  "colorTextButtonPrimaryActive": "#FFFFFF",
  "colorTextButtonPrimaryBordered": "#00A991",
  "colorTextButtonPrimaryBorderedActive": "#008F7B",
  "colorTextButtonPrimaryBorderedHover": "#009882",
  "colorTextButtonPrimaryHover": "#FFFFFF",
  "colorTextButtonSecondary": "#252A31",
  "colorTextButtonSecondaryActive": "#0B0C0F",
  "colorTextButtonSecondaryBordered": "#252A31",
  "colorTextButtonSecondaryBorderedActive": "#0B0C0F",
  "colorTextButtonSecondaryBorderedHover": "#181B20",
  "colorTextButtonSecondaryHover": "#181B20",
  "colorTextButtonSuccess": "#FFFFFF",
  "colorTextButtonSuccessActive": "#FFFFFF",
  "colorTextButtonSuccessBordered": "#28A138",
  "colorTextButtonSuccessBorderedActive": "#1D7228",
  "colorTextButtonSuccessBorderedHover": "#238B31",
  "colorTextButtonSuccessHover": "#FFFFFF",
  "colorTextButtonWarning": "#FFFFFF",
  "colorTextButtonWarningActive": "#FFFFFF",
  "colorTextButtonWarningBordered": "#E98305",
  "colorTextButtonWarningBorderedActive": "#CD7304",
  "colorTextButtonWarningBorderedHover": "#DC7C05",
  "colorTextButtonWarningHover": "#FFFFFF",
  "colorTextButtonWhite": "#252A31",
  "colorTextButtonWhiteActive": "#0B0C0F",
  "colorTextButtonWhiteBordered": "#FFFFFF",
  "colorTextButtonWhiteBorderedActive": "#FFFFFF",
  "colorTextButtonWhiteBorderedHover": "#FFFFFF",
  "colorTextButtonWhiteHover": "#181B20",
  "colorTextCritical": "#D21C1C",
  "colorTextError": "#D21C1C",
  "colorTextInfo": "#0172CB",
  "colorTextInput": "#252A31",
  "colorTextInputDisabled": "#697D95",
  "colorTextInputPrefix": "#4F5E71",
  "colorTextLinkPrimary": "#007F6D",
  "colorTextLinkPrimaryHover": "#00A991",
  "colorTextLinkSecondary": "#252A31",
  "colorTextLinkSecondaryHover": "#00A991",
  "colorTextLoading": "#BAC7D5",
  "colorTextPrimary": "#252A31",
  "colorTextSecondary": "#4F5E71",
  "colorTextSuccess": "#28A138",
  "colorTextTable": "#4F5E71",
  "colorTextTag": "#252A31",
  "colorTextTagSelected": "#EFF2F5",
  "colorTextWarning": "#E98305",
  "colorTextWhite": "#FFFFFF",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "'Roboto', -apple-system, '.SFNSText-Regular', 'San Francisco', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "12px",
  "fontSizeFormFeedback": "12px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingDisplaySubtitle": "22px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeHeadingTitle4": "14px",
  "fontSizeHeadingTitle5": "12px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "12px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingDisplaySubtitle": "400",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightHeadingTitle4": "500",
  "fontWeightHeadingTitle5": "700",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "fontWeightTableHead": "700",
  "heightBadge": "2px",
  "heightButtonLarge": "5px",
  "heightButtonNormal": "4px",
  "heightButtonSmall": "3px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "3px",
  "heightIconMedium": "2px",
  "heightIconSmall": "1px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "2px",
  "heightInputGroupSeparatorSmall": "1px",
  "heightInputLarge": "5px",
  "heightInputNormal": "4px",
  "heightInputSmall": "3px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "2px",
  "heightServiceLogoSmall": "12px",
  "heightStopoverArrow": "7px",
  "lineHeightHeading": "1.2",
  "lineHeightHeadingDisplay": "44px",
  "lineHeightHeadingDisplaySubtitle": "28px",
  "lineHeightHeadingTitle1": "36px",
  "lineHeightHeadingTitle2": "28px",
  "lineHeightHeadingTitle3": "24px",
  "lineHeightHeadingTitle4": "20px",
  "lineHeightHeadingTitle5": "20px",
  "lineHeightText": "1.4",
  "lineHeightTextLarge": "22px",
  "lineHeightTextNormal": "20px",
  "lineHeightTextSmall": "16px",
  "marginBadgeIcon": "0 4px 0 0",
  "marginBottomSelectSuffix": "2px",
  "marginButtonGroup": "0 1px 0 0",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingBadge": "0 8px",
  "paddingButtonLarge": "0 28px",
  "paddingButtonLargeWithIcons": "0 16px",
  "paddingButtonLargeWithLeftIcon": "0 28px 0 16px",
  "paddingButtonLargeWithRightIcon": "0 16px 0 28px",
  "paddingButtonNormal": "0 16px",
  "paddingButtonNormalWithIcons": "0 12px",
  "paddingButtonNormalWithLeftIcon": "0 16px 0 12px",
  "paddingButtonNormalWithRightIcon": "0 12px 0 16px",
  "paddingButtonSmall": "0 12px",
  "paddingButtonSmallWithIcons": "0 8px",
  "paddingButtonSmallWithLeftIcon": "0 12px 0 8px",
  "paddingButtonSmallWithRightIcon": "0 8px 0 12px",
  "paddingButtonWithoutText": "0",
  "paddingInputFile": "0 0 0 6px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftSelectPrefix": "48px",
  "paddingLoading": "12px",
  "paddingTable": "12px 16px",
  "paddingTableCompact": "8px 12px",
  "paddingTag": "6px 8px",
  "paddingTagRemovable": "6px 6px 6px 8px",
  "paddingTagRemovableWithIcon": "6px",
  "paddingTagWithIcon": "6px 8px 6px 6px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#005AA3",
  "paletteBlueDarkActive": "#003E70",
  "paletteBlueDarkHover": "#004F8F",
  "paletteBlueDarker": "#004680",
  "paletteBlueLight": "#E8F4FD",
  "paletteBlueLightActive": "#B4DBF8",
  "paletteBlueLightHover": "#D0E9FB",
  "paletteBlueNormal": "#0172CB",
  "paletteBlueNormalActive": "#01508E",
  "paletteBlueNormalHover": "#0161AC",
  "paletteCloudDark": "#E8EDF1",
  "paletteCloudDarker": "#BAC7D5",
  "paletteCloudDarkerActive": "#94A8BE",
  "paletteCloudDarkerHover": "#A6B6C8",
  "paletteCloudLight": "#F5F7F9",
  "paletteCloudLightActive": "#D6DEE6",
  "paletteCloudLightHover": "#E5EAEF",
  "paletteCloudNormal": "#EFF2F5",
  "paletteCloudNormalActive": "#CAD4DE",
  "paletteCloudNormalHover": "#DCE3E9",
  "paletteGreenDark": "#2B7336",
  "paletteGreenDarkActive": "#1F5126",
  "paletteGreenDarkHover": "#25642F",
  "paletteGreenDarker": "#235C2B",
  "paletteGreenLight": "#EBF4EC",
  "paletteGreenLightActive": "#C3DFC7",
  "paletteGreenLightHover": "#D7EAD9",
  "paletteGreenNormal": "#28A138",
  "paletteGreenNormalActive": "#1D7228",
  "paletteGreenNormalHover": "#238B31",
  "paletteInkLight": "#4F5E71",
  "paletteInkLightActive": "#324256",
  "paletteInkLightHover": "#3E4E63",
  "paletteInkLighter": "#697D95",
  "paletteInkLighterActive": "#4A617C",
  "paletteInkLighterHover": "#5D738E",
  "paletteInkNormal": "#252A31",
  "paletteInkNormalActive": "#0B0C0F",
  "paletteInkNormalHover": "#181B20",
  "paletteOrangeDark": "#AE5700",
  "paletteOrangeDarkActive": "#753A00",
  "paletteOrangeDarkHover": "#8F4700",
  "paletteOrangeDarker": "#803F00",
  "paletteOrangeLight": "#FDF0E3",
  "paletteOrangeLightActive": "#F8D3AB",
  "paletteOrangeLightHover": "#FAE2C7",
  "paletteOrangeNormal": "#E98305",
  "paletteOrangeNormalActive": "#CD7304",
  "paletteOrangeNormalHover": "#DC7C05",
  "paletteProductDark": "#007F6D",
  "paletteProductDarkActive": "#006657",
  "paletteProductDarkHover": "#007060",
  "paletteProductDarker": "#005C4E",
  "paletteProductLight": "#ECF8F7",
  "paletteProductLightActive": "#C0E8E4",
  "paletteProductLightHover": "#D6F0EE",
  "paletteProductNormal": "#00A991",
  "paletteProductNormalActive": "#008F7B",
  "paletteProductNormalHover": "#009882",
  "paletteRedDark": "#970C0C",
  "paletteRedDarkActive": "#6D0909",
  "paletteRedDarkHover": "#890B0B",
  "paletteRedDarker": "#760909",
  "paletteRedLight": "#FAEAEA",
  "paletteRedLightActive": "#EEB9B9",
  "paletteRedLightHover": "#F4D2D2",
  "paletteRedNormal": "#D21C1C",
  "paletteRedNormalActive": "#9D1515",
  "paletteRedNormalHover": "#B91919",
  "paletteSocialFacebook": "#3B5998",
  "paletteSocialFacebookActive": "#354F88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#FFFFFF",
  "paletteWhiteActive": "#E5EAEF",
  "paletteWhiteHover": "#F5F7F9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "underline",
  "textDecorationTextLinkPrimaryHover": "none",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "none",
  "widthBadgeCircled": "2px",
  "widthBreakpointDesktop": 992,
  "widthBreakpointLargeDesktop": 1200,
  "widthBreakpointLargeMobile": 576,
  "widthBreakpointMediumMobile": 414,
  "widthBreakpointTablet": 768,
  "widthCheckbox": "20px",
  "widthCountryFlag": "2px",
  "widthIconLarge": "3px",
  "widthIconMedium": "2px",
  "widthIconSmall": "1px",
  "widthModalExtraLarge": "1280px",
  "widthModalLarge": "900px",
  "widthModalNormal": "740px",
  "widthModalSmall": "540px",
  "widthRadioButton": "20px",
  "widthStopoverArrow": "36px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;

exports[`getTokens should accept some palette and base foundation should match snapshot 1`] = `
Object {
  "backgroundAlertCritical": "#FAEAEA",
  "backgroundAlertInfo": "#E8F4FD",
  "backgroundAlertSuccess": "#EBF4EC",
  "backgroundAlertWarning": "#FDF0E3",
  "backgroundBadgeCritical": "#FAEAEA",
  "backgroundBadgeDark": "#252A31",
  "backgroundBadgeInfo": "#E8F4FD",
  "backgroundBadgeNeutral": "#F5F7F9",
  "backgroundBadgeSuccess": "#EBF4EC",
  "backgroundBadgeWarning": "#FDF0E3",
  "backgroundBadgeWhite": "#FFFFFF",
  "backgroundBody": "#F5F7F9",
  "backgroundButtonBordered": "transparent",
  "backgroundButtonBorderedActive": "#F5F7F9",
  "backgroundButtonBorderedHover": "#F5F7F9",
  "backgroundButtonCritical": "#D21C1C",
  "backgroundButtonCriticalActive": "#9D1515",
  "backgroundButtonCriticalHover": "#B91919",
  "backgroundButtonFacebook": "#3B5998",
  "backgroundButtonFacebookActive": "#354F88",
  "backgroundButtonFacebookHover": "#385490",
  "backgroundButtonGoogle": "#F5F7F9",
  "backgroundButtonGoogleActive": "#D6DEE6",
  "backgroundButtonGoogleHover": "#E5EAEF",
  "backgroundButtonInfo": "#0172CB",
  "backgroundButtonInfoActive": "#01508E",
  "backgroundButtonInfoHover": "#0161AC",
  "backgroundButtonLinkPrimary": "transparent",
  "backgroundButtonLinkPrimaryActive": "#D6DEE6",
  "backgroundButtonLinkPrimaryHover": "#E5EAEF",
  "backgroundButtonLinkSecondary": "transparent",
  "backgroundButtonLinkSecondaryActive": "#D6DEE6",
  "backgroundButtonLinkSecondaryHover": "#E5EAEF",
  "backgroundButtonPrimary": "#444",
  "backgroundButtonPrimaryActive": "#666",
  "backgroundButtonPrimaryHover": "#555",
  "backgroundButtonSecondary": "#E8EDF1",
  "backgroundButtonSecondaryActive": "#CAD4DE",
  "backgroundButtonSecondaryHover": "#DCE3E9",
  "backgroundButtonSuccess": "#28A138",
  "backgroundButtonSuccessActive": "#1D7228",
  "backgroundButtonSuccessHover": "#238B31",
  "backgroundButtonWarning": "#E98305",
  "backgroundButtonWarningActive": "#CD7304",
  "backgroundButtonWarningHover": "#DC7C05",
  "backgroundButtonWhite": "#FFFFFF",
  "backgroundButtonWhiteActive": "#E5EAEF",
  "backgroundButtonWhiteBordered": "transparent",
  "backgroundButtonWhiteBorderedActive": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteBorderedHover": "rgba(255, 255, 255, 0.2)",
  "backgroundButtonWhiteHover": "#F5F7F9",
  "backgroundCard": "#FFFFFF",
  "backgroundCarrierLogo": "transparent",
  "backgroundCountryFlag": "transparent",
  "backgroundIllustration": "transparent",
  "backgroundInput": "#FFFFFF",
  "backgroundInputDisabled": "#EFF2F5",
  "backgroundModal": "#FFFFFF",
  "backgroundSeparator": "#EFF2F5",
  "backgroundServiceLogo": "transparent",
  "backgroundTable": "#FFFFFF",
  "backgroundTableEven": "#F5F7F9",
  "backgroundTableHover": "#EFF2F5",
  "backgroundTableShadowLeft": "linear-gradient(to left, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTableShadowRight": "linear-gradient(to right, transparent, rgba(186, 199, 213, 0.23))",
  "backgroundTag": "#F5F7F9",
  "backgroundTagActive": "#D6DEE6",
  "backgroundTagHover": "#E5EAEF",
  "backgroundTagSelected": "#252A31",
  "backgroundTagSelectedActive": "#0B0C0F",
  "backgroundTagSelectedHover": "#181B20",
  "backgroundTooltip": "#FFFFFF",
  "backgroundTooltipLargeMobile": "#005AA3",
  "borderColorButtonCriticalBordered": "#D21C1C",
  "borderColorButtonCriticalBorderedActive": "#9D1515",
  "borderColorButtonCriticalBorderedHover": "#B91919",
  "borderColorButtonFacebookBordered": "#3B5998",
  "borderColorButtonFacebookBorderedActive": "#354F88",
  "borderColorButtonFacebookBorderedHover": "#385490",
  "borderColorButtonGoogleBordered": "#252A31",
  "borderColorButtonGoogleBorderedActive": "#0B0C0F",
  "borderColorButtonGoogleBorderedHover": "#181B20",
  "borderColorButtonInfoBordered": "#0172CB",
  "borderColorButtonInfoBorderedActive": "#01508E",
  "borderColorButtonInfoBorderedHover": "#0161AC",
  "borderColorButtonPrimaryBordered": "#444",
  "borderColorButtonPrimaryBorderedActive": "#666",
  "borderColorButtonPrimaryBorderedHover": "#555",
  "borderColorButtonSecondaryBordered": "#252A31",
  "borderColorButtonSecondaryBorderedActive": "#0B0C0F",
  "borderColorButtonSecondaryBorderedHover": "#181B20",
  "borderColorButtonSuccessBordered": "#28A138",
  "borderColorButtonSuccessBorderedActive": "#1D7228",
  "borderColorButtonSuccessBorderedHover": "#238B31",
  "borderColorButtonWarningBordered": "#E98305",
  "borderColorButtonWarningBorderedActive": "#CD7304",
  "borderColorButtonWarningBorderedHover": "#DC7C05",
  "borderColorButtonWhiteBordered": "#FFFFFF",
  "borderColorButtonWhiteBorderedActive": "#FFFFFF",
  "borderColorButtonWhiteBorderedHover": "#FFFFFF",
  "borderColorCard": "#EFF2F5",
  "borderColorCheckboxRadio": "#BAC7D5",
  "borderColorCheckboxRadioActive": "#252A31",
  "borderColorCheckboxRadioError": "#D21C1C",
  "borderColorCheckboxRadioFocus": "#0172CB",
  "borderColorCheckboxRadioHover": "#4F5E71",
  "borderColorInput": "#BAC7D5",
  "borderColorInputActive": "#4A617C",
  "borderColorInputError": "#D21C1C",
  "borderColorInputErrorFocus": "#D21C1C",
  "borderColorInputErrorHover": "#B91919",
  "borderColorInputFocus": "#0172CB",
  "borderColorInputHover": "#5D738E",
  "borderColorModal": "#EFF2F5",
  "borderColorTable": "#EFF2F5",
  "borderColorTableCell": "#BAC7D5",
  "borderColorTableHead": "#BAC7D5",
  "borderColorTag": "#EFF2F5",
  "borderColorTagFocus": "#0172CB",
  "borderRadiusBadge": "12px",
  "borderRadiusCircle": "50%",
  "borderRadiusLarge": "6px",
  "borderRadiusNormal": "3px",
  "borderRadiusSmall": "2px",
  "borderStyleCard": "solid",
  "borderStyleInput": "solid",
  "borderWidthCard": "1px",
  "borderWidthInput": "1px",
  "borderWidthInputFocus": "2px",
  "boxShadowAction": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px 1px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowActionActive": "0px 1px 4px 0px rgba(37, 42, 49, 0.16), 0px 4px 8px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowButtonFocus": "0 0 4px 1px rgba(1, 114, 203, 0.3)",
  "boxShadowFixed": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px 2px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowFixedReverse": "0px 0px 2px 0px rgba(37, 42, 49, 0.16), 0px -2px 4px 0px rgba(37, 42, 49, 0.12)",
  "boxShadowOverlay": "0px 12px 24px -4px rgba(37, 42, 49, 0.24), 0px 8px 60px 0px rgba(37, 42, 49, 0.32)",
  "boxShadowRaised": "0px 4px 8px 0px rgba(37, 42, 49, 0.16), 0px 8px 24px 0px rgba(37, 42, 49, 0.24)",
  "boxShadowRaisedReverse": "0px -4px 8px 0px rgba(37, 42, 49, 0.16), 0px -8px 24px 0px rgba(37, 42, 49, 0.24)",
  "colorAlertIconCritical": "#D21C1C",
  "colorAlertIconInfo": "#0172CB",
  "colorAlertIconSuccess": "#28A138",
  "colorAlertIconWarning": "#E98305",
  "colorFormLabel": "#252A31",
  "colorFormLabelFilled": "#4F5E71",
  "colorHeading": "#252A31",
  "colorHeadingInverted": "#FFFFFF",
  "colorIconCheckboxRadio": "#444",
  "colorIconCheckboxRadioDisabled": "#BAC7D5",
  "colorIconCritical": "#D21C1C",
  "colorIconInfo": "#0172CB",
  "colorIconInput": "#BAC7D5",
  "colorIconPrimary": "#252A31",
  "colorIconRadioButton": "#444",
  "colorIconRadioButtonDisabled": "#697D95",
  "colorIconSecondary": "#4F5E71",
  "colorIconSuccess": "#28A138",
  "colorIconTertiary": "#BAC7D5",
  "colorIconWarning": "#E98305",
  "colorInfoCheckBoxRadio": "#4F5E71",
  "colorPlaceholderInput": "#697D95",
  "colorPlaceholderInputError": "#D21C1C",
  "colorPlaceholderInputFile": "#4F5E71",
  "colorPlaceholderInputFileError": "#D21C1C",
  "colorStopoverArrow": "#4F5E71",
  "colorTextAlertCritical": "#970C0C",
  "colorTextAlertInfo": "#005AA3",
  "colorTextAlertLink": "#252A31",
  "colorTextAlertSuccess": "#2B7336",
  "colorTextAlertWarning": "#AE5700",
  "colorTextBadgeCritical": "#D21C1C",
  "colorTextBadgeDark": "#FFFFFF",
  "colorTextBadgeInfo": "#0172CB",
  "colorTextBadgeNeutral": "#252A31",
  "colorTextBadgeSuccess": "#28A138",
  "colorTextBadgeWarning": "#E98305",
  "colorTextBadgeWhite": "#252A31",
  "colorTextButtonCritical": "#FFFFFF",
  "colorTextButtonCriticalActive": "#FFFFFF",
  "colorTextButtonCriticalBordered": "#D21C1C",
  "colorTextButtonCriticalBorderedActive": "#9D1515",
  "colorTextButtonCriticalBorderedHover": "#B91919",
  "colorTextButtonCriticalHover": "#FFFFFF",
  "colorTextButtonFacebook": "#FFFFFF",
  "colorTextButtonFacebookActive": "#FFFFFF",
  "colorTextButtonFacebookBordered": "#3B5998",
  "colorTextButtonFacebookBorderedActive": "#354F88",
  "colorTextButtonFacebookBorderedHover": "#385490",
  "colorTextButtonFacebookHover": "#FFFFFF",
  "colorTextButtonFilled": "#FFFFFF",
  "colorTextButtonFilledActive": "#FFFFFF",
  "colorTextButtonFilledHover": "#FFFFFF",
  "colorTextButtonGoogle": "#252A31",
  "colorTextButtonGoogleActive": "#0B0C0F",
  "colorTextButtonGoogleBordered": "#252A31",
  "colorTextButtonGoogleBorderedActive": "#0B0C0F",
  "colorTextButtonGoogleBorderedHover": "#181B20",
  "colorTextButtonGoogleHover": "#181B20",
  "colorTextButtonInfo": "#FFFFFF",
  "colorTextButtonInfoActive": "#FFFFFF",
  "colorTextButtonInfoBordered": "#0172CB",
  "colorTextButtonInfoBorderedActive": "#01508E",
  "colorTextButtonInfoBorderedHover": "#0161AC",
  "colorTextButtonInfoHover": "#FFFFFF",
  "colorTextButtonLinkPrimary": "#444",
  "colorTextButtonLinkPrimaryActive": "#666",
  "colorTextButtonLinkPrimaryHover": "#555",
  "colorTextButtonLinkSecondary": "#252A31",
  "colorTextButtonLinkSecondaryActive": "#0B0C0F",
  "colorTextButtonLinkSecondaryHover": "#181B20",
  "colorTextButtonPrimary": "#FFFFFF",
  "colorTextButtonPrimaryActive": "#FFFFFF",
  "colorTextButtonPrimaryBordered": "#444",
  "colorTextButtonPrimaryBorderedActive": "#666",
  "colorTextButtonPrimaryBorderedHover": "#555",
  "colorTextButtonPrimaryHover": "#FFFFFF",
  "colorTextButtonSecondary": "#252A31",
  "colorTextButtonSecondaryActive": "#0B0C0F",
  "colorTextButtonSecondaryBordered": "#252A31",
  "colorTextButtonSecondaryBorderedActive": "#0B0C0F",
  "colorTextButtonSecondaryBorderedHover": "#181B20",
  "colorTextButtonSecondaryHover": "#181B20",
  "colorTextButtonSuccess": "#FFFFFF",
  "colorTextButtonSuccessActive": "#FFFFFF",
  "colorTextButtonSuccessBordered": "#28A138",
  "colorTextButtonSuccessBorderedActive": "#1D7228",
  "colorTextButtonSuccessBorderedHover": "#238B31",
  "colorTextButtonSuccessHover": "#FFFFFF",
  "colorTextButtonWarning": "#FFFFFF",
  "colorTextButtonWarningActive": "#FFFFFF",
  "colorTextButtonWarningBordered": "#E98305",
  "colorTextButtonWarningBorderedActive": "#CD7304",
  "colorTextButtonWarningBorderedHover": "#DC7C05",
  "colorTextButtonWarningHover": "#FFFFFF",
  "colorTextButtonWhite": "#252A31",
  "colorTextButtonWhiteActive": "#0B0C0F",
  "colorTextButtonWhiteBordered": "#FFFFFF",
  "colorTextButtonWhiteBorderedActive": "#FFFFFF",
  "colorTextButtonWhiteBorderedHover": "#FFFFFF",
  "colorTextButtonWhiteHover": "#181B20",
  "colorTextCritical": "#D21C1C",
  "colorTextError": "#D21C1C",
  "colorTextInfo": "#0172CB",
  "colorTextInput": "#252A31",
  "colorTextInputDisabled": "#697D95",
  "colorTextInputPrefix": "#4F5E71",
  "colorTextLinkPrimary": "#777",
  "colorTextLinkPrimaryHover": "#444",
  "colorTextLinkSecondary": "#252A31",
  "colorTextLinkSecondaryHover": "#444",
  "colorTextLoading": "#BAC7D5",
  "colorTextPrimary": "#252A31",
  "colorTextSecondary": "#4F5E71",
  "colorTextSuccess": "#28A138",
  "colorTextTable": "#4F5E71",
  "colorTextTag": "#252A31",
  "colorTextTagSelected": "#EFF2F5",
  "colorTextWarning": "#E98305",
  "colorTextWhite": "#FFFFFF",
  "durationFast": "0.15s",
  "durationNormal": "0.3s",
  "durationSlow": "0.4s",
  "fontFamily": "'Roboto', -apple-system, '.SFNSText-Regular', 'San Francisco', 'Segoe UI', 'Helvetica Neue', 'Lucida Grande', sans-serif",
  "fontSizeButtonLarge": "16px",
  "fontSizeButtonNormal": "14px",
  "fontSizeButtonSmall": "16px",
  "fontSizeFormFeedback": "16px",
  "fontSizeFormLabel": "14px",
  "fontSizeHeadingDisplay": "40px",
  "fontSizeHeadingDisplaySubtitle": "22px",
  "fontSizeHeadingTitle1": "28px",
  "fontSizeHeadingTitle2": "22px",
  "fontSizeHeadingTitle3": "16px",
  "fontSizeHeadingTitle4": "14px",
  "fontSizeHeadingTitle5": "16px",
  "fontSizeInputNormal": "14px",
  "fontSizeInputSmall": "14px",
  "fontSizeMessage": "14px",
  "fontSizeTextLarge": "16px",
  "fontSizeTextNormal": "14px",
  "fontSizeTextSmall": "16px",
  "fontWeightBold": "700",
  "fontWeightHeadingDisplay": "700",
  "fontWeightHeadingDisplaySubtitle": "400",
  "fontWeightHeadingTitle1": "700",
  "fontWeightHeadingTitle2": "500",
  "fontWeightHeadingTitle3": "500",
  "fontWeightHeadingTitle4": "500",
  "fontWeightHeadingTitle5": "700",
  "fontWeightLinks": "500",
  "fontWeightMedium": "500",
  "fontWeightNormal": "400",
  "fontWeightTableHead": "700",
  "heightBadge": "24px",
  "heightButtonLarge": "52px",
  "heightButtonNormal": "44px",
  "heightButtonSmall": "32px",
  "heightCheckbox": "20px",
  "heightCountryFlag": "auto",
  "heightIconLarge": "32px",
  "heightIconMedium": "24px",
  "heightIconSmall": "16px",
  "heightIllustrationMedium": "200px",
  "heightIllustrationSmall": "90px",
  "heightInputGroupSeparatorNormal": "24px",
  "heightInputGroupSeparatorSmall": "16px",
  "heightInputLarge": "52px",
  "heightInputNormal": "44px",
  "heightInputSmall": "32px",
  "heightRadioButton": "20px",
  "heightSeparator": "1px",
  "heightServiceLogoLarge": "48px",
  "heightServiceLogoMedium": "24px",
  "heightServiceLogoSmall": "12px",
  "heightStopoverArrow": "7px",
  "lineHeightHeading": "1.2",
  "lineHeightHeadingDisplay": "44px",
  "lineHeightHeadingDisplaySubtitle": "28px",
  "lineHeightHeadingTitle1": "36px",
  "lineHeightHeadingTitle2": "28px",
  "lineHeightHeadingTitle3": "24px",
  "lineHeightHeadingTitle4": "20px",
  "lineHeightHeadingTitle5": "20px",
  "lineHeightText": "1.4",
  "lineHeightTextLarge": "22px",
  "lineHeightTextNormal": "20px",
  "lineHeightTextSmall": "16px",
  "marginBadgeIcon": "0 4px 0 0",
  "marginBottomSelectSuffix": "2px",
  "marginButtonGroup": "0 1px 0 0",
  "marginButtonIconLarge": "12px",
  "marginButtonIconNormal": "8px",
  "marginButtonIconSmall": "8px",
  "marginTopFormFeedback": "2px",
  "modifierScaleButtonActive": 0.95,
  "modifierScaleCheckboxRadioActive": 0.95,
  "opacityButtonDisabled": "0.3",
  "opacityCheckboxDisabled": "0.5",
  "opacityOverlay": "0.8",
  "opacityRadioButtonDisabled": "0.5",
  "paddingAlert": "16px",
  "paddingAlertWithIcon": "12px",
  "paddingBadge": "0 8px",
  "paddingButtonLarge": "0 28px",
  "paddingButtonLargeWithIcons": "0 16px",
  "paddingButtonLargeWithLeftIcon": "0 28px 0 16px",
  "paddingButtonLargeWithRightIcon": "0 16px 0 28px",
  "paddingButtonNormal": "0 16px",
  "paddingButtonNormalWithIcons": "0 12px",
  "paddingButtonNormalWithLeftIcon": "0 16px 0 12px",
  "paddingButtonNormalWithRightIcon": "0 12px 0 16px",
  "paddingButtonSmall": "0 12px",
  "paddingButtonSmallWithIcons": "0 8px",
  "paddingButtonSmallWithLeftIcon": "0 12px 0 8px",
  "paddingButtonSmallWithRightIcon": "0 8px 0 12px",
  "paddingButtonWithoutText": "0",
  "paddingInputFile": "0 0 0 6px",
  "paddingInputNormal": "0 12px",
  "paddingInputSmall": "0 12px",
  "paddingLeftSelectPrefix": "48px",
  "paddingLoading": "12px",
  "paddingTable": "12px 16px",
  "paddingTableCompact": "8px 12px",
  "paddingTag": "6px 8px",
  "paddingTagRemovable": "6px 6px 6px 8px",
  "paddingTagRemovableWithIcon": "6px",
  "paddingTagWithIcon": "6px 8px 6px 6px",
  "paddingTextareaNormal": "12px",
  "paddingTextareaSmall": "8px 12px",
  "paletteBlueDark": "#005AA3",
  "paletteBlueDarkActive": "#003E70",
  "paletteBlueDarkHover": "#004F8F",
  "paletteBlueDarker": "#004680",
  "paletteBlueLight": "#E8F4FD",
  "paletteBlueLightActive": "#B4DBF8",
  "paletteBlueLightHover": "#D0E9FB",
  "paletteBlueNormal": "#0172CB",
  "paletteBlueNormalActive": "#01508E",
  "paletteBlueNormalHover": "#0161AC",
  "paletteCloudDark": "#E8EDF1",
  "paletteCloudDarker": "#BAC7D5",
  "paletteCloudDarkerActive": "#94A8BE",
  "paletteCloudDarkerHover": "#A6B6C8",
  "paletteCloudLight": "#F5F7F9",
  "paletteCloudLightActive": "#D6DEE6",
  "paletteCloudLightHover": "#E5EAEF",
  "paletteCloudNormal": "#EFF2F5",
  "paletteCloudNormalActive": "#CAD4DE",
  "paletteCloudNormalHover": "#DCE3E9",
  "paletteGreenDark": "#2B7336",
  "paletteGreenDarkActive": "#1F5126",
  "paletteGreenDarkHover": "#25642F",
  "paletteGreenDarker": "#235C2B",
  "paletteGreenLight": "#EBF4EC",
  "paletteGreenLightActive": "#C3DFC7",
  "paletteGreenLightHover": "#D7EAD9",
  "paletteGreenNormal": "#28A138",
  "paletteGreenNormalActive": "#1D7228",
  "paletteGreenNormalHover": "#238B31",
  "paletteInkLight": "#4F5E71",
  "paletteInkLightActive": "#324256",
  "paletteInkLightHover": "#3E4E63",
  "paletteInkLighter": "#697D95",
  "paletteInkLighterActive": "#4A617C",
  "paletteInkLighterHover": "#5D738E",
  "paletteInkNormal": "#252A31",
  "paletteInkNormalActive": "#0B0C0F",
  "paletteInkNormalHover": "#181B20",
  "paletteOrangeDark": "#AE5700",
  "paletteOrangeDarkActive": "#753A00",
  "paletteOrangeDarkHover": "#8F4700",
  "paletteOrangeDarker": "#803F00",
  "paletteOrangeLight": "#FDF0E3",
  "paletteOrangeLightActive": "#F8D3AB",
  "paletteOrangeLightHover": "#FAE2C7",
  "paletteOrangeNormal": "#E98305",
  "paletteOrangeNormalActive": "#CD7304",
  "paletteOrangeNormalHover": "#DC7C05",
  "paletteProductDark": "#777",
  "paletteProductDarkActive": "#999",
  "paletteProductDarkHover": "#888",
  "paletteProductDarker": "#005C4E",
  "paletteProductLight": "#ECF8F7",
  "paletteProductLightActive": "#333",
  "paletteProductLightHover": "#222",
  "paletteProductNormal": "#444",
  "paletteProductNormalActive": "#666",
  "paletteProductNormalHover": "#555",
  "paletteRedDark": "#970C0C",
  "paletteRedDarkActive": "#6D0909",
  "paletteRedDarkHover": "#890B0B",
  "paletteRedDarker": "#760909",
  "paletteRedLight": "#FAEAEA",
  "paletteRedLightActive": "#EEB9B9",
  "paletteRedLightHover": "#F4D2D2",
  "paletteRedNormal": "#D21C1C",
  "paletteRedNormalActive": "#9D1515",
  "paletteRedNormalHover": "#B91919",
  "paletteSocialFacebook": "#3B5998",
  "paletteSocialFacebookActive": "#354F88",
  "paletteSocialFacebookHover": "#385490",
  "paletteWhite": "#FFFFFF",
  "paletteWhiteActive": "#E5EAEF",
  "paletteWhiteHover": "#F5F7F9",
  "spaceLarge": "24px",
  "spaceMedium": "16px",
  "spaceSmall": "12px",
  "spaceXLarge": "32px",
  "spaceXSmall": "8px",
  "spaceXXLarge": "40px",
  "spaceXXSmall": "4px",
  "spaceXXXLarge": "52px",
  "spaceXXXSmall": "2px",
  "textDecorationTextLinkPrimary": "underline",
  "textDecorationTextLinkPrimaryHover": "none",
  "textDecorationTextLinkSecondary": "underline",
  "textDecorationTextLinkSecondaryHover": "none",
  "widthBadgeCircled": "24px",
  "widthBreakpointDesktop": 992,
  "widthBreakpointLargeDesktop": 1200,
  "widthBreakpointLargeMobile": 576,
  "widthBreakpointMediumMobile": 414,
  "widthBreakpointTablet": 768,
  "widthCheckbox": "20px",
  "widthCountryFlag": "24px",
  "widthIconLarge": "32px",
  "widthIconMedium": "24px",
  "widthIconSmall": "16px",
  "widthModalExtraLarge": "1280px",
  "widthModalLarge": "900px",
  "widthModalNormal": "740px",
  "widthModalSmall": "540px",
  "widthRadioButton": "20px",
  "widthStopoverArrow": "36px",
  "zIndexDefault": "1",
  "zIndexModal": "825",
  "zIndexModalOverlay": "800",
  "zIndexOnTheTop": "900",
  "zIndexSticky": "100",
}
`;
